Fix body sizing causing overflow

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Tinos&display=swap');
 
 body {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     padding: 0;
     margin: 0;
     -webkit-font-smoothing: antialiased;
